<resources>
    <string name="app_name">Covid-19 Stats App</string>

    <string name="total_recovered">Total Recovered</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="digits_placeholder">-</string>

    <string name="digits_placeholder_removed">420</string>

    <string name="global">Global</string>
    <string name="countries">Countries</string>
    <string name="covid_19">Covid-19</string>
    <string name="settings">Settings</string>

    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="cases">Cases</string>

    <string name="MyBirthDayEasterEgg">Thursday 19, November</string>

    <string name="error_dialog_title">Error!</string>
    <string name="error_dialog_message">Check your internet connection.</string>
    <string name="ok">OK</string>

    <string name="active_cases">Active Cases</string>
    <string name="case_per_1_million">Per 1 million </string>
    <string name="cases_today">Cases Today</string>
    <string name="separator">:</string>
    <string name="deaths_today">Deaths Today</string>
    <string name="critical_cases">Critical Cases</string>
    <string name="country_placeholder">Country</string>


    <string name="share_app">Share app</string>
    <string name="change_theme">Turn on dark mode.</string>
    <string name="about_developer">About Developer.</string>
    <string name="version_number">Version 2.0.0</string>

    <string name="about_covid_1">Coronavirus disease 2019(COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2(SARS-CoV-2).</string>
    <string name="about_covid_2">World Health Organization announced on 11th February 2020 that “COVID-19” would be the official name of the disease. “Co” for Corona, “Vi” for Virus, “Di” for disease and “19” for 2019 which is the year the outbreak was identified.</string>
    <string name="about_covid_3">The disease was first identified in 2019 in Wuhan, Central China, and has since spread globally, resulting in the 2019–2020 coronavirus pandemic.</string>
    <string name="about_covid_4">The virus is typically spread from one person to another via respiratory droplets produced during coughing. It may also be spread from touching contaminated surfaces and then touching one\'s face. Fecal-oral transmission is also being studied as the virus has been found in patients stool.</string>

    <string name="learn_more">Learn more about COVID-19</string>

    <string name="symptoms">Symptoms.</string>
    <string name="coughing">Coughing.</string>
    <string name="fever">Fever.</string>
    <string name="flu">Flu.</string>
    <string name="out_of_breath">Out of breath.</string>
    <string name="sore_throat">Sore Throat.</string>
    <string name="headache">Headache.</string>

    <string name="symptom_fever">Fever is a key symptom of infection. Experts say don’t fixate on a number, but know it’s really not a fever until your body temperature reaches at least 37.7º Celsius (100º Fahrenheit) for children and adults.</string>
    <string name="symptom_coughing">Coughing is also a key symptom of infection but not just any cough, a dry cough that you feel in your chest.</string>
    <string name="symptom_flu">Flu-like symptoms such as a runny nose has also been identified as symptom of infection.</string>
    <string name="symptom_out_of_breathe">Shortness of breath can be a very serious manifestation of COVID-19, and it can occur on its own, without a cough. If your chest begins to feel tight or you begin to feel as if you cannot breathe deeply enough to get a good breath, that’s a sign to act.</string>
    <string name="symptom_sore_throat">Experts have also report that a majority of patients reported having sore throat.</string>
    <string name="symptom_headache">Experts have also reported that some patients who have COVID-19 have complained of having a headache.</string>

    <string name="prevention">Prevention.</string>
    <string name="wash_your_hands">Wash your hands.</string>
    <string name="social_distancing">Social distancing.</string>
    <string name="face_mask">Use of face mask.</string>
    <string name="sanitizer">Use of sanitizer.</string>
    <string name="stay_at_home">Stay at home.</string>

    <string name="prevention_wash_hands">Wash your hands often with water and soap for at least 20 seconds, or use an alcohol-based hand sanitizer that contains at least 60% alcohol. Also avoid touching your eyes, nose and mouth if your hands aren\'t clean.</string>
    <string name="prevention_social_distancing">Avoid large crowds and gatherings. Also avoid close contact (about 6 feet) with anyone who is sick or has symptoms. Stay home from work, school and public areas to avoid spreading or getting the disease.</string>
    <string name="prevention_face_mask">If you are infected with the disease use a face mask to cover your mouth to prevent infecting others and change it often. Cover your mouth and nose with your elbow or a tissue when you cough or sneeze. Throw away the used tissue.</string>

    <string name="dev_name">Victor Kabata Ndung\'u</string>
    <string name="twitter_handle">\@VickiKbt</string>
    <string name="email_address">victorbro14@gmail.com</string>
    <string name="my_website">victorkabata.github.io</string>
    <string name="send_feedback">Send Feedback.</string>
    <string name="loading">Loading</string>
    <string name="country">Country</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="search">Search</string>

    <string name="myEmailAddress">\victorbro14@gmail.com</string>
    <string name="myName">Victor Kabata Ndung\'u.</string>
    <string name="myTwitterHandle">\@VickiKbt</string>
    <string name="myWebsite">https://victorkabata.github.io/</string>


</resources>
