<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_pic"
        app:civ_border_color="@color/primaryText"
        app:civ_border_width="1dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/semi_transparent_card"
        android:elevation="0dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/myName"
                android:textColor="@color/primaryText"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profile_emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/myEmailAddress"
                android:textColor="@color/primaryText"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profile_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_website"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/myWebsite"
                android:textColor="@color/primaryText"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profile_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_twitter"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/myTwitterHandle"
                android:textColor="@color/primaryText"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>