<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.vickikbt.covid_19statapp.ui.settings.SettingsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:background="@drawable/covid_background"
            android:elevation="-5dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:src="@drawable/logo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/exo_bold"
                            android:text="@string/app_name"
                            android:textColor="@color/primaryText"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/exo"
                            android:text="@string/version_number"
                            android:textColor="@color/primaryText"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linearLayout_version"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/secondaryText" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="8dp"
                        android:onClick="@{viewmodel::darkMode}"
                        android:padding="8dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_theme"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/change_theme"
                            android:textColor="@color/primaryText"
                            android:textSize="20sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/secondaryText" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="8dp"
                        android:onClick="@{viewmodel::sendFeedback}"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_feedback"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/send_feedback"
                            android:textColor="@color/primaryText"
                            android:textSize="20sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/secondaryText" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout_developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="8dp"
                        android:onClick="@{viewmodel::aboutDev}"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_website"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/about_developer"
                            android:textColor="@color/primaryText"
                            android:textSize="20sp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:background="@color/secondaryText" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
</layout>