<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.global.GlobalFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:background="@drawable/covid_background"
            android:elevation="-5dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/exo_bold"
                    android:textColor="@color/primaryText"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="@string/MyBirthDayEasterEgg" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_cases"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/textView_date"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/semi_transparent_card"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/exo_bold"
                            android:text="@string/total_cases"
                            android:textColor="@color/primaryText"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_cases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/exo"
                            android:text="@string/digits_placeholder"
                            android:textAllCaps="true"
                            android:textColor="@color/soothing_blue"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_deaths"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/cardView_cases"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/semi_transparent_card"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/exo_bold"
                            android:text="@string/total_deaths"
                            android:textColor="@color/primaryText"
                            android:textSize="25sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/textView_deaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/exo"
                            android:text="@string/digits_placeholder"
                            android:textAllCaps="true"
                            android:textColor="@color/sad_red"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/cardView_deaths"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    app:cardBackgroundColor="@color/semi_transparent_card"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/exo_bold"
                            android:text="@string/total_recovered"
                            android:textColor="@color/primaryText"
                            android:textSize="25sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/textView_recovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/exo"
                            android:gravity="center_horizontal"
                            android:text="@string/digits_placeholder"
                            android:textAllCaps="true"
                            android:textColor="@color/hopeful_green"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar_global"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/secondaryText" />

    </RelativeLayout>

</layout>